Update markdown question about product revenue

--- a/Data analytics exercises.ipynb
+++ b/Data analytics exercises.ipynb
@@ -205,7 +205,7 @@
    "id": "913624c2-b4ae-49a9-bc5c-e82c63771513",
    "metadata": {},
    "source": [
-    "## 1. Na jaké kategorii produktů máme největší obrat? A zajímalo by mě i jestli se to v jednotlivých měsících mění."
+    "## 1. Na jakém produktu je největší obrat? Meni se v jednotlivych mesicich?."
    ]
   },
   {
